fixed scrollbars for different browsers

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
     margin: 0;
     text-align: center;
     font-family: 'Cubano','Alatsi';
+    overflow-x: hidden;
   }
 
 .game {
